--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Train Time</title>
-<script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+	<title>Fancy Trains</title>
+	<script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+	<script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 
- <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+ 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
- <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+ 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
- <script src="assets/javascript/java.js"></script>
+ 	<script src="assets/javascript/java.js"></script>
 
 </head>
 <body>
@@ -65,15 +65,11 @@
     			<label for="email">Frequency (min)</label>
     			<input type="number" class="form-control" id="frequency">
   			</div>
-  			<button id="submitButton" type="submit" class="btn btn-default">Submit</button>
+  			<button id="submitBTN" type="submit" class="btn btn-default">Submit</button>
 		</form>
 
 	</div>
 </div>
-
-
-
-
 </div>
 
 </body>
